# clipboard-syncer

./: .eslintrc.js  .gitignore  .prettierignore  .prettierrc.js  .taurignore  README.md  package-lock.json  package.json
.github/workflows/: backend-ci.yaml
src/: App.tsx  index.tsx  types.d.ts
src-tauri/: .env  .gitignore  Cargo.toml  Makefile  build.rs  tauri.conf.json
src-tauri/examples/: client.rs
src-tauri/graphql/: next_args.graphql  publish.graphql  record.graphql
src-tauri/migrations/2023-09-01-095758_record/: down.sql  up.sql
src-tauri/proto/: sync.proto
src-tauri/src/: lib.rs  main.rs  schema.rs
src-tauri/src/command/: config.rs  mod.rs  process.rs  record.rs
src-tauri/src/config/: app_config.rs  configure.rs  mod.rs
src-tauri/src/consts/: mod.rs
src-tauri/src/dao/: mod.rs  record_cache_dao.rs  record_dao.rs
src-tauri/src/graphql/: mod.rs
src-tauri/src/handler/: global_handler.rs  mod.rs  model.rs  process_handler.rs
src-tauri/src/listener/: clipboard.rs  global_event.rs  global_event_listener.rs  mod.rs  model.rs  shortcut.rs
src-tauri/src/logger/: mod.rs
src-tauri/src/model/: record.rs
src-tauri/src/models/: image_data.rs  mod.rs  record.rs  record_cache.rs  sync.rs
src-tauri/src/p2panda/: graphql.rs  key_pair.rs  mod.rs  models.rs  node.rs
src-tauri/src/storage/: cache.rs  mod.rs  sqlite.rs
src-tauri/src/sync/: mod.rs  server.rs  service.rs  syncer.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/utils/: clipboard.rs  dir.rs  dirs.rs  image.rs  ip.rs  json.rs  mod.rs  process.rs  string_util.rs
src-tauri/tests/: client.rs
src/components/: ChildComponent.tsx  GlobalContext.tsx  InitEnv.tsx  RecordCard.tsx  RecordList.tsx  SearchBar.tsx
src/css/: App.css  AppSetting.css  MainSpotlight.css  RecoardCard.css  RecordList.css  SearchBar.css
src/models/: AppConfig.ts  EventListenerEnum.ts  ImageData.ts  Record.ts  RecordDocument.ts
src/utils/: consts.ts  graphql.ts  image.ts
src/view/: AppSetting.tsx  MainSpotlight.tsx
