[package]
name = "app"
version = "0.1.0"
description = "A simple clipboard manager with synchronization"
authors = ["jasonkayzk@gmail.com"]
license = "MIT License"
repository = "https://github.com/SuperClipboard/clipboard-syncer"
default-run = "app"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tonic-build = "0.8.4"
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = ["system-tray"] }
chrono = "0.4.23"
log = "0.4"
lazy_static = "1.4.0"
dotenv = "0.15"
anyhow = "1.0"
rust-crypto = { version = "0.2.36" }
base64 = "0.21.0"
image = "0.24.5"
diesel = { version = "2.1.0", features = ["sqlite"] }
diesel_migrations = "2.1.0"
arboard = "3.2.1"
once_cell = "1.17.0"
parking_lot = "0.12.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
local-ip-address = "0.5.4"
prost = "0.11.3"
tonic = "0.8.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
