[package]
name = "app"
version = "0.1.0"
description = "A simple clipboard manager with synchronization"
authors = ["jasonkayzk@gmail.com"]
license = "MIT License"
repository = "https://github.com/SuperClipboard/clipboard-syncer"
default-run = "app"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = [ "dialog-all", "system-tray"] }
chrono = "0.4.23"
log = "0.4"
lazy_static = "1.4.0"
dotenv = "0.15"
anyhow = "1.0"
rust-crypto = { version = "0.2.36" }
base64 = "0.21.0"
image = "0.24.5"
aquadoggo = "0.5.0"
p2panda-rs = "0.7.1"
hex = "0.4.3"
toml = "0.4.2"
graphql_client = "0.13.0"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
arboard = "3.2.1"
once_cell = "1.17.0"
parking_lot = "0.12.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
local-ip-address = "0.5.4"
regex = "1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
