[package]
name = "app"
version = "0.1.0"
description = "A simple clipboard manager with synchronization"
authors = ["jasonkayzk@gmail.com"]
license = "MIT License"
repository = "https://github.com/SuperClipboard/clipboard-syncer"
default-run = "app"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["macos-private-api", "window-all", "dialog-all", "system-tray", "global-shortcut", "notification"] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
chrono = "0.4.23"
log = "0.4"
lazy_static = "1.4.0"
dotenv = "0.15"
anyhow = "1.0"
rust-crypto = { version = "0.2.36" }
base64 = "0.21.0"
image = "0.24.5"
aquadoggo = "0.5.0"
p2panda-rs = "0.7.1"
hex = "0.4.3"
toml = "0.4.2"
graphql_client = "0.13.0"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
arboard = "3.2.1"
once_cell = "1.17.0"
parking_lot = "0.12.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
local-ip-address = "0.5.4"
regex = "1"

[target.'cfg(target_os = "macos")'.dependencies]
macos-accessibility-client = "0.0.1"
window-shadows = "0.2"

[target.'cfg(windows)'.dependencies]
dunce = "1.0.3"
windows = { version = "0.44.0", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Graphics_Imaging", "Media_Ocr", "Foundation", "Globalization", "Storage", "Storage_Streams"] }
window-shadows = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
#window-shadows = "0.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
